plugins {
    // For runnable JARs
    id 'application'
    id 'distribution'
}

// Java project
apply plugin: 'java'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


// ANTLR support
apply plugin: 'antlr'

// Repositories providers
repositories {
    mavenCentral()
}

tasks.withType(Tar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Zip) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

installDist {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}


tasks.register('compileLibsJmm', JavaCompile) {
    group = 'jmm'
    source = fileTree('libs-jmm/java') {
        include '**/*.java'
    }
    classpath = configurations.compileClasspath
    destinationDirectory = file("libs-jmm/compiled")
    options.encoding = 'UTF-8'
}


// Project sources
sourceSets {
    main {
        java {
            srcDir 'src/main'
            srcDir 'generated-src/antlr'
            srcDir 'generated-src/main'
        }
    }

    test {
        java {
            srcDir 'test'
            srcDir 'test-public'
        }

        resources {
            srcDir 'test'
            srcDir 'test-public'
        }
    }
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation files('libs-jmm/compiled')

    implementation "junit:junit:4.11"
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
    antlr "org.antlr:antlr4:4.5.3"
    // https://mvnrepository.com/artifact/org.fusesource.jansi/jansi
    implementation 'org.fusesource.jansi:jansi:2.4.0'
}

application {
    mainClass = 'pt.up.fe.comp2026.Launcher'
}


generateGrammarSource {
    outputDirectory = file("generated-src/antlr/")
    group = "antlr"
}

tasks.register('cleanGenerated') {
    description = "Clear the generated-src directory"
    group = "build"
    delete "generated-src/antlr/"
    delete "generated-src/main/"
}

tasks.register('buildGrammarSource') {
    dependsOn generateGrammarSource
    group = "antlr"
    description = "Build source files generated by ANTLR"
    doLast {
        ant.mkdir dir: layout.buildDirectory.dir("classes/java/main").get()
        ant.javac(
                srcdir: "generated-src/antlr/",
                destdir: layout.buildDirectory.dir("classes/java/main").get(),
                classpath: sourceSets.main.runtimeClasspath.filter {
                    it.name.contains("antlr") //todo check exactly the jar(?) dependency
                }.asPath,
                includeAntRuntime: false
        )
    }
}

tasks.register('generateKindAndAttributesSources') {
    description = "Generate Kind and Attributes source files based on the ANTLR grammar"
//    dependsOn cleanGenerated
    dependsOn buildGrammarSource
    group = "jmm"
    // For composite builds, depend on tasks from included builds
    //dependsOn gradle.includedBuild('comp2026-lib').task(':jar')
    doLast {
        ant.java(
                classname: "pt.up.fe.comp.jmm.ast.antlr.tools.CompClassesGenerator",
                classpath: sourceSets.main.runtimeClasspath.asPath,
                fork: true,
                outputproperty: "stdout",
                errorproperty: "stderr"
        ) {
            arg value: "pt.up.fe.comp2026"      // antlr package (see .g4 file)
            arg value: "Javamm"                 // antlr prefix  (see .g4 file)
            arg value: "pt.up.fe.comp2026.jmm"  // base package for generated classes
            arg value: "Jmm"                    // prefix for generated classes
            arg value: "generated-src/main"     // output directory for generated classes
        }

        // Print output
        if (ant.properties.stdout) {
            println ant.properties.stdout

        }
        if (ant.properties.stderr) {
            println "Kind generation error: ${ant.properties.stderr}"
        }
    }
}

compileJava.dependsOn 'generateKindAndAttributesSources'


void createWebsiteApplicationTask(String name, @DelegatesTo(Task.class) Object... paths) {
    task(name) {
        group = 'website'

        doFirst {
            application {
                mainClass = 'pt.up.fe.comp2026.website.WebsiteLauncher'
            }
        }

        finalizedBy paths
    }
}

createWebsiteApplicationTask("websiteRun", run)
createWebsiteApplicationTask("websiteInstallDist", installDist)
